--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                      <div class="card-body">
                         <h4 class="card-title">Muganthan.k</h4>
                         <h6 class="card-subtitle mb-2 text-muted">Admin/back end developer</h6>
-                        <p class="card-text">The best way predict the futer is invert it.</p>
+                        <p class="card-text">The best way predict the futer is to invert it.</p>
                      </div>
                      <div class="card-footer social-icons">
                         <a href="#"><i class="fab fa-facebook"></i></a>
