--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                   <div class="blogs-slider owl-carousel owl-theme">
                         <div class="item">
                               <div class="card theme-card blog-card">
-                     <img class="card-img-top" src="img/team/1.jpg" alt="">
+                     <img class="card-img-top" src="img/team/1.png" alt="">
                      <div class="card-body">
                         <h4 class="card-title">Muganthan.k</h4>
                         <h6 class="card-subtitle mb-2 text-muted">Admin/back end developer</h6>
