--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             <div class="row">
                <div class="col-md-4">
                   <div class="custom-card testimonials-item text-center">
-                     <img class="img-fluid mb-4" src="img/user/1.jpg" alt="">
+                     <img class="img-fluid mb-4" src="img/user/1.png" alt="">
                      <p class="mb-4">Keep rocking guys.Android developing is amazing.</p>
                      <h6 class="mb-0 text-primary">- Hari .K.G</h6>
                      <small>Android developer</small>
@@ -445,7 +445,7 @@
                </div>
                <div class="col-md-4">
                   <div class="custom-card testimonials-item text-center">
-                     <img class="img-fluid mb-4" src="img/user/2.jpg" alt="">
+                     <img class="img-fluid mb-4" src="img/user/2.png" alt="">
                      <p class="mb-4">Engineering is perfect.</p>
                      <h6 class="mb-0 text-primary">- Raja</h6>
                      <small>Software engineer</small>
@@ -453,7 +453,7 @@
                </div>
                <div class="col-md-4">
                   <div class="custom-card testimonials-item text-center">
-                     <img class="img-fluid mb-4" src="img/user/3.jpg" alt="">
+                     <img class="img-fluid mb-4" src="img/user/3.png" alt="">
                      <p class="mb-4">Desinging is not to do a normal human.It is next level.... </p>
                      <h6 class="mb-0 text-primary">- Kavin Kumar.K</h6>
                      <small>UI Designer</small>
