--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
                   <div class="features-item text-center">
                      <img class="img-fluid mb-4" src="img/f1.png" alt="">
                      <h5 class="mb-4">24/7 Support</h5>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                     <p>Support projects generally include production and maintenance activities which you need to carry out on various servers using ticketing methodology.</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="features-item text-center">
                      <img class="img-fluid mb-4" src="img/f2.png" alt="">
                      <h5 class="mb-4">Best Projects</h5>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                     <p>We provide a best project in user interface and user design.Best way to try to delevry project for customer and user.</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="features-item text-center">
                      <img class="img-fluid mb-4" src="img/f3.png" alt="">
                      <h5 class="mb-4">Highly Customizable</h5>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                     <p>us ​ used to describe something that you can change according to a customer's or user's particular need.</p>
                   </div>
                </div>
             </div>
@@ -123,21 +123,21 @@
                   <div class="features-item text-center">
                      <img class="img-fluid mb-4" src="img/f4.png" alt="">
                      <h5 class="mb-4">Cloud Service</h5>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                     <p>(CSP) are companies that offer network services, infrastructure, or business applications in the cloud. The cloud services are hosted in a data center that can be accessed by companies or individuals using network connectivity.</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="features-item text-center">
                      <img class="img-fluid mb-4" src="img/f5.png" alt="">
                      <h5 class="mb-4">Responsive Design</h5>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                     <p>The practice consists of a mix of flexible grids and layouts, images and an intelligent use of CSS media queries.</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="features-item text-center">
                      <img class="img-fluid mb-4" src="img/f6.png" alt="">
                      <h5 class="mb-4">Secure</h5>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                     <p>It is fixed or fastened so as not to give way, become loose, or be lost..</p>
                   </div>
                </div>
             </div>
@@ -151,13 +151,13 @@
                   <div class="amazing-dashboard-left">
                      <h2 class="mb-2">Amazing Dashboard</h2>
                      <span class="section-title-line mb-4"></span>
-                     <p class="mb-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley..</p>
+                     <p class="mb-5">In most cases, a dashboards UI will contain information such as stats, analytics, schedules, messages and much more. Essentially, a dashboard is a user interface designed to interact with the back-end of a website or application that makes it easier for the user to make changes and access information.</p>
                      <h5>1. Clean Code</h5>
-                     <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                     <p class="mb-5">Clean code is code that is easy to understand and easy to change. ... Easy to understand means the code is easy to read, whether that reader is the original author of the code or somebody else. It's meaning is clear so it minimizes the need for guesswork and possibility for misunderstandings.</p>
                      <h5>2. Bootstrap 4 framwork</h5>
-                     <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                     <p class="mb-5">Get started with Bootstrap, the world’s most popular framework for building responsive, mobile-first sites, with BootstrapCDN and a template starter page.</p>
                      <h5>3. Creative user interface</h5>
-                     <p class="mb-0">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                     <p class="mb-0">UI Design Examples for Great UX. UX (User Experience) is all those elements and factors related to the user's interaction with a particular environment or device which generate a positive or negative perception of the product, brand or device. ... These are what is known as Graphic User Interfaces.</p>
                   </div>
                </div>
                <div class="col-md-6">
@@ -223,8 +223,8 @@
                   <div class="features-mid-left pt-4">
                      <h2 class="mb-2">Beautyful Features</h2>
                      <span class="section-title-line mb-4"></span>
-                     <p class="mb-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-                     <button type="button" class="btn btn-primary">Create Your Account</button>
+                     <p class="mb-5">Beautiful code is code that everyone can appreciate, or in other words - read. It's actually quite hard to write code that can be read by beginners and experts but still preserve efficiency, scalability, and maintainability. </p>
+                     <!-- <button type="button" class="btn btn-primary">Create Your Account</button> -->
                   </div>
                </div>
             </div>
@@ -238,8 +238,8 @@
                   <div class="features-mid-left pt-4">
                      <h2 class="mb-2">Real Time Systems</h2>
                      <span class="section-title-line mb-4"></span>
-                     <p class="mb-5">Lorem Ipsum is simply dummy text of the printing and <a class="text-primary" href="#"><strong>Highlight Text</strong></a> typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a  galley of type and scrambled it to make a type specimen book. </p>
-                     <button type="button" class="btn btn-primary">READ MORE</button>
+                     <p class="mb-5">Real Time System is a software system where the correct functioning of the system depends on the results produced by the system and the time at which these results are produced. Few notes to be pointed: It is time-critical. Hence, real-time systems must respond within specified period of time </p>
+                     <!-- <button type="button" class="btn btn-primary">READ MORE</button> -->
                   </div>
                </div>
                <div class="col-md-6">
@@ -472,7 +472,7 @@
             </div>
             <div class="row">
                <div class="col-md-8 mx-auto text-center">
-                  <p class="lead mb-5 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+                  <p class="lead mb-5 text-white">Our project is readying to launch please wait for it.Now our project is ongoing testing...</p>
                   <p><button type="button" class="btn btn-light btn-lg">DOWNLOAD NOW</button></p>
                </div>
             </div>
