--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
                               <div class="card theme-card blog-card">
                      <img class="card-img-top" src="img/team/1.png" alt="">
                      <div class="card-body">
-                        <h4 class="card-title">Muganthan.k</h4>
+                        <h4 class="card-title">Mugunthkumar</h4>
                         <h6 class="card-subtitle mb-2 text-muted">Admin/back end developer</h6>
-                        <p class="card-text">The best way predict the futer is to invert it.</p>
+                        <p class="card-text">The best way predict the futere is to invert it.</p>
                      </div>
                      <div class="card-footer social-icons">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -308,7 +308,7 @@
                      <img class="card-img-top" src="img/team/2.jpg" alt="">
                      <div class="card-body">
                         <h4 class="card-title">Dineshkumar.E</h4>
-                        <h6 class="card-subtitle mb-2 text-muted">Android DEveloper</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Android Developer</h6>
                         <p class="card-text">developer is an organism that turns coffee into codes.</p>
                      </div>
                      <div class="card-footer social-icons">
@@ -323,8 +323,8 @@
                      <img class="card-img-top" src="img/team/3.jpg" alt="">
                      <div class="card-body">
                         <h4 class="card-title">Vivek</h4>
-                        <h6 class="card-subtitle mb-2 text-muted">UI developer</h6>
-                        <p class="card-text">all computers wait at the same speed.Proud to be a developer.</p>
+                        <h6 class="card-subtitle mb-2 text-muted">UI designer/developer</h6>
+                        <p class="card-text">all computers wait at the same speed,Proud to be a developer.</p>
                      </div>
                      <div class="card-footer social-icons">
                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -352,7 +352,7 @@
                      <div class="card theme-card blog-card">
                      <img class="card-img-top" src="img/team/5.jpg" alt="">
                      <div class="card-body">
-                        <h4 class="card-title">Gokul Raja Varma.M</h4>
+                        <h4 class="card-title">Gokula Raja Varma.M</h4>
                         <h6 class="card-subtitle mb-2 text-muted">Marketing Manager</h6>
                         <p class="card-text">Content marketing is more than a buzzword.</p>
                      </div>
