--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                      <p class="mb-5">In most cases, a dashboards UI will contain information such as stats, analytics, schedules, messages and much more. Essentially, a dashboard is a user interface designed to interact with the back-end of a website or application that makes it easier for the user to make changes and access information.</p>
                      <h5>1. Clean Code</h5>
                      <p class="mb-5">Clean code is code that is easy to understand and easy to change. ... Easy to understand means the code is easy to read, whether that reader is the original author of the code or somebody else. It's meaning is clear so it minimizes the need for guesswork and possibility for misunderstandings.</p>
-                     <h5>2. Bootstrap 4 framwork</h5>
+                     <h5>2. Amazing Websites</h5>
                      <p class="mb-5">Get started with Bootstrap, the world’s most popular framework for building responsive, mobile-first sites, with BootstrapCDN and a template starter page.</p>
                      <h5>3. Creative user interface</h5>
                      <p class="mb-0">UI Design Examples for Great UX. UX (User Experience) is all those elements and factors related to the user's interaction with a particular environment or device which generate a positive or negative perception of the product, brand or device. ... These are what is known as Graphic User Interfaces.</p>
